--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@vercel/speed-insights": "^1.0.10",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "classnames": "^2.3.1",
